crates/data-dict/tests/snapshots/translate__an_r_expression_reports_its_language_and_canonical_form.snap
---
source: crates/data-dict/tests/translate.rs
expression: "serde_json::to_string_pretty(&translations).unwrap()"
---
[
  {
    "expr": "nchar(postcode) <= 10",
    "language": "r",
    "canonical": "LENGTH(postcode) <= 10",
    "fidelity": "divergent",
    "notes": [
      "R reads a NaN as missing, so comparing against one gives NA where data-dict answers false; a row holding one passes here and is reported there."
    ],
    "table": "survey",
    "type": "boolean",
    "columns": [
      "postcode"
    ],
    "translations": [
      {
        "target": "SQL(data-dict)",
        "code": "LENGTH(postcode) <= 10",
        "notes": []
      }
    ]
  }
]
